# imu_plotter1

imu_plotter/: README.md  package.xml  setup.cfg  setup.py
imu_plotter/imu_plotter/: acceleration_pi_ro.py  angular_acceleration_ya_pi_ro.py  imu_publ.py  kalman_filtter.py  magnetic_ya.py  posvel.py  visualizer.py
imu_plotter/launch/: imu_sensor.launch.py
imu_plotter/msg/: MyImu.msg
