<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>imu_plotter</name>
  <version>0.0.1</version>
  <description>IMU Data Plotter and Processor Package</description>
  <maintainer email="kimjeongmin@todo.todo">Kim Jeongmin</maintainer>
  <license>Apache-2.0</license>  <!-- ✅ 라이선스 수정 -->

  <!-- ✅ 필수 의존성 -->
  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>  <!-- ✅ IMU 데이터 처리 추가 -->
  <depend>geometry_msgs</depend>  <!-- ✅ Vector3 메시지 추가 -->
  <depend>myimu</depend>

  <!-- ✅ 외부 라이브러리 의존성 -->
  <depend>requests</depend>
  <depend>numpy</depend>  <!-- ✅ python3-numpy 제거 (중복) -->
  <depend>python3-scipy</depend>
  <depend>tf_transformations</depend>  <!-- ✅ 올바른 변환 패키지 추가 -->

  <!-- ✅ 테스트 의존성 -->
  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <!-- ✅ 빌드 타입 명시 -->
  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
